*SVN*

* Support agnostic formats when calling custom methods.  Closes #10635 [joerichsen]

* Document custom methods.  #10589 [Cheah Chu Yeow]

* Ruby 1.9 compatibility.  [Jeremy Kemper]


*2.0.2* (December 16th, 2007)

* Added more specific exceptions for 400, 401, and 403 (all descending from ClientError so existing rescues will work) #10326 [trek]

* Correct empty response handling.  #10445 [seangeo]


*2.0.1* (December 7th, 2007)

* Don't cache net/http object so that ActiveResource is more thread-safe.  Closes #10142 [kou]

* Update XML documentation examples to include explicit type attributes. Closes #9754 [hasmanyjosh]

* Added one-off declarations of mock behavior [DHH]. Example:

    Before:
      ActiveResource::HttpMock.respond_to do |mock|
        mock.get "/people/1.xml", {}, "<person><name>David</name></person>"
      end
      
    Now:
      ActiveResource::HttpMock.respond_to.get "/people/1.xml", {}, "<person><name>David</name></person>"

* Added ActiveResource.format= which defaults to :xml but can also be set to :json [DHH]. Example:

    class Person < ActiveResource::Base
      self.site   = "http://app/"
      self.format = :json
    end
    
    person = Person.find(1) # => GET http://app/people/1.json
    person.name = "David"
    person.save             # => PUT http://app/people/1.json {name: "David"}
    
    Person.format = :xml
    person.name = "Mary"
    person.save             # => PUT http://app/people/1.json <person><name>Mary</name></person>    

* Fix reload error when path prefix is used.  #8727 [Ian Warshak]

* Remove ActiveResource::Struct because it hasn't proven very useful. Creating a new ActiveResource::Base subclass is often less code and always clearer.  #8612 [Josh Peek]

* Fix query methods on resources. [Cody Fauser]

* pass the prefix_options to the instantiated record when using find without a specific id. Closes #8544 [alloy]
