@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow setting ActiveResource::Base#format before #site.  [rick]
+
 * Support agnostic formats when calling custom methods.  Closes #10635 [joerichsen]
 
 * Document custom methods.  #10589 [Cheah Chu Yeow]
